tidos/tests/view_macro/panics/forgot_to_close_html_tag.rs
use tidos::view;

fn misspelled_html_in_raw_statement() {
	assert_eq!(
		&view!{
			<div>
		},
		r#"macro should panic"#
	);
}

fn main() {}